--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   De lekkerste wijn komt van Martijn!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: wijnvanmartijn
+twitter_username:
 github_username:
 google_analytics: UA-NNNNNNNN-N
 collections:
