Update google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
-google_analytics: UA-NNNNNNNN-N
+google_analytics: UA-348429-15
 collections:
   wijnen :
     output: true
